added PUT and DELETE API routes to application
