# routes/postsRoute.js
@@ -3,13 +3,17 @@ const router = express.Router();
 const postsController = require('../controllers/postsController');
 
 module.exports = (postsCollection) => {
-  const { getPosts, getPostsByTag, createPost } = postsController(postsCollection);
+  const { getPosts, getPostsByTag, createPost, updatePosts, deletePosts } = postsController(postsCollection);
 
   router.get('/', getPosts);
 
   router.get('/:tags', getPostsByTag);
 
   router.post('/', createPost);
+
+  router.put('/:id', updatePosts);
+
+  router.delete('/:id', deletePosts)
 
   return router;
 };
