# routes/usersRoute.js
@@ -3,13 +3,17 @@ const router = express.Router();
 const usersController = require('../controllers/usersController');
 
 module.exports = (usersCollection) => {
-  const { getUsers, getUserByUsername, createUser } = usersController(usersCollection);
+  const { getUsers, getUserByUsername, createUser, updateUser, deleteUser } = usersController(usersCollection);
 
   router.get('/', getUsers);
 
   router.get('/:username', getUserByUsername);
 
   router.post('/', createUser);
+
+  router.put('/:id', updateUser);
+
+  router.delete('/:id', deleteUser);
 
   return router;
 };
